--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 　　　　<title>{{ page.title }}</title>
+		<style>
+			body{
+				text-align: center;
+			}
+		</style>
 
 　　</head>
 
