--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
   {% include head.html %}
-
+  <style>
+    a.catalogue_item>p{
+      height: 100px;
+    }
+  </style>
   <body>
     <nav class="nav">
       <div class="nav-container">
