--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
   <style>
-    a.catalogue-item>p{
+    a.catalogue-item>div>p{
       height: 100px;
     }
   </style>
