--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
   {% include head.html %}
+  <style>
+    div.catalogue>a{
+      width: 550px;
+    }
+  </style>
   <body>
     <nav class="nav">
       <div class="nav-container">
